examples/test/testpolicy6459.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6459
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key8: value25
      key41: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value19
          key44: value35
      podSelector:
        matchLabels:
          key19: value17
          key46: value30
          key28: value29
